Bug 647687 - Fix filter SourceImage bounds. r=longsonr